[FE] STYLE errorPage responsive, header button lost fixed, pre tag wrapped, two warning in eval page resolved

--- a/frontend/hoodies/src/common/UI/header/header.module.css
+++ b/frontend/hoodies/src/common/UI/header/header.module.css
@@ -63,8 +63,10 @@
   left: 0 !important;
 }
 
-#menu__toggle:checked + .root {
+#menu__toggle:checked + .menu__btn {
   position:fixed;
+  left: 5%;
+  top: 5%;
 }
 
 .menu__btn {
